# subsector-interface

./: .gitignore  Caddyfile  Dockerfile  README.md  app.py  constants.py  db_orm.py  docker-compose.yml  guidelines.py  pyproject.toml  requirements.txt
data/: data.csv
pages/: 00_Upload_CSV.py  01_New_Tagger.py  02_New_Entry_Tag.py  03_View_Entry_Tag.py  04_Edit_Entry_Tag.py  05_Validate_Entry_Tag.py
