[tool.poetry]
name = "sectortagging"
version = "0.1.0"
description = ""
authors = ["dev <dev@togglecorp.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
numpy = "==1.23.5"
pandas = "==1.5.2"
psycopg2-binary = "==2.9.5"
SQLAlchemy = "==1.4.44"
streamlit = "==1.15.1"
SQLAlchemy-Utils = "==0.40.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
